# RAG---GenAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  app_multimodal.py  bm25_index.json  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt  run_evaluation.py  СХЕМА
Docs/: AUDIT_REPORT.md
apps/: app.py  app_all.py  app_colpali.py  app_multimodal.py
apps/pages/: 1_Text_RAG.py  2_Multimodal.py  3_ColPali.py
eval/: experiments.py  llm_judge.py  metrics.py  runner.py
rag/: __init__.py  advanced_retriever.py  embeddings.py  gemini_client.py  hybrid_retrieval.py  image_extraction.py  indexing.py  metadata_extractor.py  multihop_retrieval.py  multimodal_indexing.py  multimodal_prompts.py  observability.py  pdf_extract.py  rag_pipeline.py  reranker.py  retrieval_config.py  semantic_cache.py  settings.py  sparse_retrieval.py  table_extraction.py
rag/colpali/: __init__.py  comparison.py  late_interaction.py  patch_embeddings.py  source_attribution.py  visual_generation.py  visual_ingestion.py
scripts/: entrypoint.sh  ingest.py  run_evaluation.py
